--- a/st.css
+++ b/st.css
@@ -25,7 +25,7 @@
 }
 .fbody {
     margin: 0px;
-    background-image: url("../majesty/OIP (1).jpeg");
+    background-image: url("OIP (1).jpeg");
     background-repeat: no-repeat;
     background-size:cover;
     border: 0px;
